<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <ScrollView
        android:id="@+id/post_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/top_profil"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="30dp"
                android:background="@drawable/top_profil"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Pictures_Gallery"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_menu_gallery"
                    android:lineSpacingExtra="10sp"
                    app:layout_constraintBottom_toTopOf="@+id/picturefromcamera"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.601"
                    app:layout_constraintStart_toEndOf="@+id/picture"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="MissingConstraints,UnknownId"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="88dp" />

                <Button
                    android:id="@+id/picturefromcamera"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_menu_camera"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.977"
                    app:layout_constraintStart_toEndOf="@+id/picture"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.631" />
            </LinearLayout>

            <EditText
                android:id="@+id/localisationtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/localisation"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/Picbtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.524"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/picture"
                app:layout_constraintVertical_bias="0.226" />

            <EditText
                android:id="@+id/descriptiontext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/Picbtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/localisationtext"
                app:layout_constraintVertical_bias="0.6" />

            <Button
                android:id="@+id/Picbtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/picture"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="240dp" />

        </LinearLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bottom_nav"
        style="@style/Base.TextAppearance.AppCompat.Subhead.Inverse"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:background="@drawable/top_profil"
        app:itemHorizontalTranslationEnabled="true"
        app:itemIconTint="@color/ic_launcher_background"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_scroll"
        tools:ignore="MissingPrefix">

        <Button
            android:id="@+id/bottom_actu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/homeAsUpIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>